samples/_failures_safe/1761456512_c65a68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f28c1e10.c: In function ‘main’:
./samples/SAFE/__tmp_f28c1e10.c:142:12: error: missing terminating " character
  142 |     printf("\nEnter minimum level to filter (0=DEBUG, 1=INFO,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f28c1e10.c:142:5: error: expected expression at end of input
  142 |     printf("\nEnter minimum level to filter (0=DEBUG, 1=INFO,
      |     ^~~~~~
./samples/SAFE/__tmp_f28c1e10.c:142:5: error: expected declaration or statement at end of input
